fix: spacing header

--- a/src/es/components/molecules/dialog/left-slide-in-checkout-/left-slide-in-checkout-.css
+++ b/src/es/components/molecules/dialog/left-slide-in-checkout-/left-slide-in-checkout-.css
@@ -71,7 +71,7 @@
   max-width: var(--dialog-left-slide-in-checkout-max-width-container-custom, _max-width_);
   width: 100%;
   margin: 0 auto;
-  padding: calc(24rem/18);
+  padding: 1.5rem;
 }
 
 :host .dialog-header {
